fix(app): prevent footer not aligned on bottom

--- a/apps/web/src/styles/global.css
+++ b/apps/web/src/styles/global.css
@@ -22,6 +22,6 @@
   outline: none;
 }
 
-#contenido:focus {
+#main:focus {
   outline: none;
 }
